--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,18 @@
-/*
-Colors used:
+/* Color Scheme Used:
 Primary Color Brand (Tan): #E8DDD5
 Primary Color GD (Pink): #EEE5E9;
 Secondary Color GD (Navy): #556A7A;
 */
 
+/*For box sizing*/
+* {
+  box-sizing: border-box;
+}
+
+/*For Text*/
 body {
   font-family: 'Playfair Display', sans-serif;
 }
-
 body {
   background-color: #E8DDD5;
   font-family: 'Playfair Display', sans-serif;
@@ -21,6 +25,7 @@ body {
 h1, h2, h3, h4 {
   line-height: 1.4;
 }
+
 h1 {
   font-size: 2.75em;
   font-weight: 600;
@@ -30,7 +35,7 @@ h2 {
   font-weight: 600;
 }
 h3 {
-  font-size: 1.75em;
+  font-size: 1.5em;
   font-weight: 400;
 }
 h4 {
@@ -38,10 +43,12 @@ h4 {
   font-weight: 400;
 }
 
+/*For Images*/
 img {
   width: 100%;
 }
-
+]
+/*For Hyperlink*/
 a {
   color: #556A7A;
   text-decoration: none; /* No underlining */
@@ -64,14 +71,15 @@ a:focus {
   text-decoration: underline;
 }
 
+/*For Buttons*/
 .button {
   display: inline-block; /* since the <a> tag is inline by default, we need to change this to inline-block, but more on this in the next exercise */
-  background-color: #ff7f50;
+  background-color: #434C53;
   color: #ffffff; /* needed to override the default link color */
   font-weight: 400;
   padding: 10px;
   border-radius: 3px;
-  border-bottom: 2px solid #994c30; /* width of the border, type, color */
+  border-bottom: 2px solid #4a4a4a; /* width of the border, type, color */
   transition: 0.2s opacity;
 }
 
@@ -90,6 +98,35 @@ a:focus {
   background-color: #ff7f50;
   color: #ffffff;
 }
+/*For Header*/
+header {
+  background-color: #E8DDD5;
+  padding: 10px;
+    padding-top: 10px;
+    padding-right: 5px;
+    padding-bottom: 15px;
+    padding-left: 5px;
+  margin: 10px;
+  selector {
+  margin: 0 auto; /* No spacing to top and bottom and auto spacing to left and right */
+}
+.row {
+  margin: 25px 0; /* 25px top and bottom, 0 left and right */
+}
+#work .row { padding-bottom: 25px; border-bottom: 1px solid #4a4a4a; }
+
+
+  border-bottom: 3px solid 38DDD5;
+  selector {
+  position: relative;
+}
+
+/* Layout styling */
+
+.container {
+  padding: 0 15px;
+}
+
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
