--- a/css/style.css
+++ b/css/style.css
@@ -5,629 +5,279 @@ Primary Color Writing (Plum): #654B54
 Secondary Color: #E8D5CC
 */
 
+/* -------------------------BASICS -------------------------- */
+/* -------------------------------------------------------------------------- */
 /*For box sizing*/
 * {
-  box-sizing: border-box;
-}
-/*For Images*/
-img {
-  width: 100%;
+	box-sizing: border-box;
 }
 
-.navtoggle li:not(:last-child) {
-  display: none;
+html {
+	line-height: 1.15; /* 1 */
+	-webkit-text-size-adjust: 100%; /* 2 */
+}
+
+/*
+ * Remove the margin in all browsers.
+ */
+
+body {
+	margin: 0;
+}
+
+/*For Images*/
+img {
+	width: 100%;
 }
 
 /* -------------------------OVERALL LAYOUT STYLING -------------------------- */
 /* -------------------------------------------------------------------------- */
 
 #hero {
-  background-color: #B2A083;
-  background-color: #E8DDD6;
-  padding: 20px 0;
-  background-color: #E8DDD6;
-  padding: 20px 0;
-  display: block;
-  width: 100%;
-  max-width: 150px;
-  min-width: 641px
+	background-color: #b2a083;
+	background-color: #e8ddd6;
+	padding: 20px 0;
+	background-color: #e8ddd6;
+	padding: 20px 0;
+	display: block;
+	width: 100%;
+	max-width: 1000px;
+	margin: auto;
 }
 
 main {
-  padding-top: 133px;
+	padding-top: 133px;
 }
 
 /* -------------------------------------- FONTS AND TEXT / H1-5 HEADERS ------------------------------------- */
 
 #hero h1 {
-  margin: 0;
-  padding: 0.67em 0;
+	margin: 0;
+	padding: 0.67em 0;
 }
 #hero span {
-  display: block;
-  text-align: center;
+	display: block;
+	text-align: center;
 }
 #hero h2 {
-  text-align: center; /* Centers text */
+	text-align: center; /* Centers text */
 }
 
 /*For Text*/
 body {
-  font-family: 'Playfair Display', sans-serif;
+	font-family: 'Playfair Display', sans-serif;
 }
 body {
-  background-color: #B2A083;
-  font-family: 'Playfair Display', sans-serif;
-  font-size: 18px; /* Sets the font size to 16px */
-  font-weight: 400; /* Sets the font weight to 300 */
-  line-height: 1.6; /* Sets the line-height to 1.6 * the font-size */
-  color: #4a4a4a;
+	background-color: #b2a083;
+	font-family: 'Playfair Display', sans-serif;
+	font-size: 18px; /* Sets the font size to 16px */
+	font-weight: 400; /* Sets the font weight to 300 */
+	line-height: 1.6; /* Sets the line-height to 1.6 * the font-size */
+	color: #4a4a4a;
 }
 
-h1, h2, h3, h4 {
-  line-height: 1.4;
+h1,
+h2,
+h3,
+h4 {
+	line-height: 1.4;
 }
 
 h1 {
-  font-size: 2.75em;
-  font-weight: 600;
+	font-size: 2.75em;
+	font-weight: 600;
 }
 h2 {
-  font-size: 2.25em;
-  font-weight: 600;
+	font-size: 2.25em;
+	font-weight: 600;
 }
 h3 {
-  font-size: 1.5em;
-  font-weight: 400;
+	font-size: 1.5em;
+	font-weight: 400;
 }
 h4 {
-  font-size: 1.35em;
-  font-weight: 400;
+	font-size: 1.35em;
+	font-weight: 400;
 }
-
 
 /* -------------------------------------- LINKS ------------------------------------- */
 
 a {
-  color: #556A7A;
-  text-decoration: none; /* No underlining */
+	color: #556a7a;
+	text-decoration: none; /* No underlining */
 }
 a:hover {
-  color: #9E6B4E;
-  text-decoration: underline; /* Underlining when hovering over a link */
+	color: #9e6b4e;
+	text-decoration: underline; /* Underlining when hovering over a link */
 }
 
-a:visited { /* visited link */
-  color: #654B54;
+a:visited {
+	/* visited link */
+	color: #654b54;
 }
-a:active { /* selected link */
-  color: #BEB4B4;
+a:active {
+	/* selected link */
+	color: #beb4b4;
 }
 
 a:hover,
 a:focus {
-  color: #654B54;
-  text-decoration: underline;
+	color: #654b54;
+	text-decoration: underline;
 }
 
 /*For Buttons*/
 .button {
-  display: inline-block; /* since the <a> tag is inline by default, we need to change this to inline-block, but more on this in the next exercise */
-  background-color: #B2A083;
-  color: #654B54; /* needed to override the default link color */
-  font-weight: 400;
-  padding: 10px;
-  border-radius: 3px;
-  border-bottom: 2px solid #4a4a4a; /* width of the border, type, color */
-  transition: 0.2s opacity;
+	display: inline-block; /* since the <a> tag is inline by default, we need to change this to inline-block, but more on this in the next exercise */
+	background-color: #b2a083;
+	color: #654b54; /* needed to override the default link color */
+	font-weight: 400;
+	padding: 10px;
+	border-radius: 3px;
+	border-bottom: 2px solid #4a4a4a; /* width of the border, type, color */
+	transition: 0.2s opacity;
 }
 
 .button:hover {
-  opacity: 0.8; /* Reduces the opacity of the button to 80% */
-  text-decoration: none;
+	opacity: 0.8; /* Reduces the opacity of the button to 80% */
+	text-decoration: none;
 }
 
 .button.contact {
-  background-color: transparent;
-  color: #654B54;
-  text-transform: uppercase;
-  border: 2px solid #B2A083;
+	background-color: transparent;
+	color: #654b54;
+	text-transform: uppercase;
+	border: 2px solid #b2a083;
 }
 .button.contact:hover {
-  background-color: #654B54;
-  color: #ffffff;
+	background-color: #654b54;
+	color: #ffffff;
 }
 
-/* -------------------------------------- HEADER ------------------------------------- */
+/* -------------------------------------- NAVIGATION ------------------------------------- */
 header {
-  background-color: #E8DDD5;
-  padding: 10px;
-  padding: 10px 0;
-  margin: 10px;
+	background-color: #e8ddd5;
+	padding: 10px;
+	padding: 10px 0;
+	margin: 10px;
 }
 
 nav > ul {
-  list-style-type: none;
-  padding: 0;
+	list-style-type: none;
+	padding: 0;
 }
 
 .navtoggle li:not(:last-child) {
-  display: none;
+	display: none;
 }
 
 nav > ul > li > a {
-  padding: 0 15px;
-  text-transform: uppercase;
-  font-weight: 700;
-  color: #4a4a4a;
+	padding: 0 15px;
+	text-transform: uppercase;
+	font-weight: 700;
+	color: #4a4a4a;
 }
 
 .row {
-  margin: 25px 0; /* 25px top and bottom, 0 left and right */
+	margin: 25px 0; /* 25px top and bottom, 0 left and right */
 }
 
-
 #work .row {
-  padding-bottom: 25px;
-  border-bottom: 1px
-  solid #4a4a4a;
+	padding-bottom: 25px;
+	border-bottom: 1px solid #4a4a4a;
 }
 
 /* Layout styling */
 
 .container {
-  padding: 0 15px;
+	padding: 0 15px;
 }
 
 .logo {
-  max-width: 250px;
-}
-
-/* Document
-   ========================================================================== */
-
-/**
- * 1. Correct the line height in all browsers.
- * 2. Prevent adjustments of font size after orientation changes in iOS.
- */
-
-html {
-  line-height: 1.15; /* 1 */
-  -webkit-text-size-adjust: 100%; /* 2 */
-}
-
-/* Sections
-   ========================================================================== */
-
-/**
- * Remove the margin in all browsers.
- */
-
-body {
-  margin: 0;
-}
-
-/**
- * Render the `main` element consistently in IE.
- */
-
-main {
-  display: block;
-}
-
-/**
- * Correct the font size and margin on `h1` elements within `section` and
- * `article` contexts in Chrome, Firefox, and Safari.
- */
-
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
-}
-
-/* Grouping content
-   ========================================================================== */
-
-/**
- * 1. Add the correct box sizing in Firefox.
- * 2. Show the overflow in Edge and IE.
- */
-
-hr {
-  box-sizing: content-box; /* 1 */
-  height: 0; /* 1 */
-  overflow: visible; /* 2 */
-}
-
-/**
- * 1. Correct the inheritance and scaling of font size in all browsers.
- * 2. Correct the odd `em` font sizing in all browsers.
- */
-
-pre {
-  font-family: monospace, monospace; /* 1 */
-  font-size: 1em; /* 2 */
-}
-
-/* Text-level semantics
-   ========================================================================== */
-
-/**
- * Remove the gray background on active links in IE 10.
- */
-
-a {
-  background-color: transparent;
-}
-
-/**
- * 1. Remove the bottom border in Chrome 57-
- * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
- */
-
-abbr[title] {
-  border-bottom: none; /* 1 */
-  text-decoration: underline; /* 2 */
-  text-decoration: underline dotted; /* 2 */
-}
-
-/**
- * Add the correct font weight in Chrome, Edge, and Safari.
- */
-
-b,
-strong {
-  font-weight: bolder;
-}
-
-/**
- * 1. Correct the inheritance and scaling of font size in all browsers.
- * 2. Correct the odd `em` font sizing in all browsers.
- */
-
-code,
-kbd,
-samp {
-  font-family: monospace, monospace; /* 1 */
-  font-size: 1em; /* 2 */
-}
-
-/**
- * Add the correct font size in all browsers.
- */
-
-small {
-  font-size: 80%;
-}
-
-/**
- * Prevent `sub` and `sup` elements from affecting the line height in
- * all browsers.
- */
-
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
-}
-
-sub {
-  bottom: -0.25em;
-}
-
-sup {
-  top: -0.5em;
-}
-
-/* Embedded content
-   ========================================================================== */
-
-/**
- * Remove the border on images inside links in IE 10.
- */
-
-img {
-  border-style: none;
-}
-
-/* Forms
-   ========================================================================== */
-
-/**
- * 1. Change the font styles in all browsers.
- * 2. Remove the margin in Firefox and Safari.
- */
-
-button,
-input,
-optgroup,
-select,
-textarea {
-  font-family: inherit; /* 1 */
-  font-size: 100%; /* 1 */
-  line-height: 1.15; /* 1 */
-  margin: 0; /* 2 */
-}
-
-/**
- * Show the overflow in IE.
- * 1. Show the overflow in Edge.
- */
-
-button,
-input { /* 1 */
-  overflow: visible;
-}
-
-/**
- * Remove the inheritance of text transform in Edge, Firefox, and IE.
- * 1. Remove the inheritance of text transform in Firefox.
- */
-
-button,
-select { /* 1 */
-  text-transform: none;
-}
-
-/**
- * Correct the inability to style clickable types in iOS and Safari.
- */
-
-button,
-[type="button"],
-[type="reset"],
-[type="submit"] {
-  -webkit-appearance: button;
-}
-
-/**
- * Remove the inner border and padding in Firefox.
- */
-
-button::-moz-focus-inner,
-[type="button"]::-moz-focus-inner,
-[type="reset"]::-moz-focus-inner,
-[type="submit"]::-moz-focus-inner {
-  border-style: none;
-  padding: 0;
-}
-
-/**
- * Restore the focus styles unset by the previous rule.
- */
-
-button:-moz-focusring,
-[type="button"]:-moz-focusring,
-[type="reset"]:-moz-focusring,
-[type="submit"]:-moz-focusring {
-  outline: 1px dotted ButtonText;
-}
-
-/**
- * Correct the padding in Firefox.
- */
-
-fieldset {
-  padding: 0.35em 0.75em 0.625em;
-}
-
-/**
- * 1. Correct the text wrapping in Edge and IE.
- * 2. Correct the color inheritance from `fieldset` elements in IE.
- * 3. Remove the padding so developers are not caught out when they zero out
- *    `fieldset` elements in all browsers.
- */
-
-legend {
-  box-sizing: border-box; /* 1 */
-  color: inherit; /* 2 */
-  display: table; /* 1 */
-  max-width: 100%; /* 1 */
-  padding: 0; /* 3 */
-  white-space: normal; /* 1 */
-}
-
-/**
- * Add the correct vertical alignment in Chrome, Firefox, and Opera.
- */
-
-progress {
-  vertical-align: baseline;
-}
-
-/**
- * Remove the default vertical scrollbar in IE 10+.
- */
-
-textarea {
-  overflow: auto;
-}
-
-/**
- * 1. Add the correct box sizing in IE 10.
- * 2. Remove the padding in IE 10.
- */
-
-[type="checkbox"],
-[type="radio"] {
-  box-sizing: border-box; /* 1 */
-  padding: 0; /* 2 */
-}
-
-/**
- * Correct the cursor style of increment and decrement buttons in Chrome.
- */
-
-[type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button {
-  height: auto;
-}
-
-/**
- * 1. Correct the odd appearance in Chrome and Safari.
- * 2. Correct the outline style in Safari.
- */
-
-[type="search"] {
-  -webkit-appearance: textfield; /* 1 */
-  outline-offset: -2px; /* 2 */
-}
-
-/**
- * Remove the inner padding in Chrome and Safari on macOS.
- */
-
-[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-
-/**
- * 1. Correct the inability to style clickable types in iOS and Safari.
- * 2. Change font properties to `inherit` in Safari.
- */
-
-::-webkit-file-upload-button {
-  -webkit-appearance: button; /* 1 */
-  font: inherit; /* 2 */
-}
-
-/* Interactive
-   ========================================================================== */
-
-/*
- * Add the correct display in Edge, IE 10+, and Firefox.
- */
-
-details {
-  display: block;
-}
-
-/*
- * Add the correct display in all browsers.
- */
-
-summary {
-  display: list-item;
-}
-
-/* Misc
-   ========================================================================== */
-
-/**
- * Add the correct display in IE 10+.
- */
-
-template {
-  display: none;
-}
-
-/**
- * Add the correct display in IE 10.
- */
-
-[hidden] {
-  display: none;
+	max-width: 100px;
 }
 
 /* --------------------------------------- HAMBURGER MENU ---------------------------------------- */
 .navtoggle li .icon {
-  position: absolute;
-  right: 0;
-  top: 2px;
-  font-size: 20px;
+	position: absolute;
+	right: 0;
+	top: 2px;
+	font-size: 20px;
 }
 
 .navtoggle.responsive nav {
-  padding: 24px 0 0;
+	padding: 24px 0 0;
 }
 
-.navtoggle.responsive li  {
-  display: block;
-  padding: 10px 0;
-  border-top: 1px solid rgba(255,127,80,0.5);
+.navtoggle.responsive li {
+	display: block;
+	padding: 10px 0;
+	border-top: 1px solid rgba(255, 127, 80, 0.5);
 }
 
 .navtoggle.responsive li:last-child {
-  padding: 0 0 10px;
+	padding: 0 0 10px;
 }
 
 /* --------------------------------------- MEDIA QUIERIES ---------------------------------------- */
+
+[class*='col-'] {
+	float: left;
+}
+.row::after {
+	content: '';
+	clear: both;
+	display: table;
+}
+.col-sm-6 {
+	width: 50%;
+}
+
 /* =============
 Medium devices (640px and larger)
 ================================================================================================== */
 
 @media only screen and (min-width: 640px) {
-  header {
-    text-align: unset;
-    padding: 20px 0 13px;
-  }
-  nav {
-    width: auto;
-    float: right;
-    margin-top: 4px;
-  }
-  .col-md-6 {
-    width: 50%;
-  }
-  [class*="col-"] {
-  float: left;
-}
-  .row::after {
-  content: "";
-  clear: both;
-  display: table;
-}
-nav > ul > li {
-    display: inline-block;
-    position: relative;
-  }
+	header {
+		text-align: unset;
+		padding: 20px 0 13px;
+	}
+	nav {
+		width: auto;
+		float: right;
+		margin-top: 4px;
+	}
+	.col-md-6 {
+		width: 50%;
+	}
+	.col-md-4 {
+		width: calc(100% / 4);
+	}
 
-  .navtoggle li:not(:last-child) {
-    display: inline-block;
-  }
+	nav > ul > li {
+		display: inline-block;
+		position: relative;
+	}
 
-  .navtoggle li:last-child {
-    display: none;
-  }
+	.navtoggle li:not(:last-child) {
+		display: inline-block;
+	}
+
+	.navtoggle li:last-child {
+		display: none;
+	}
 }
+
 /* ==============================
 Large devices (1024px or larger)
 ================================= */
+
 @media only screen and (min-width: 1024px) {
 }
+
 /* ==============================
 X-large devices (1440px or larger)
 ================================= */
+
 @media only screen and (min-width: 1440px) {
-}
-
-/* --------------------------------------- Animation ---------------------------------------- */
-
-.descWrapper {
-  padding: 20px;
-}
-
-@keyframes color-change {
-  from {fill: #edc655;}
-  to {fill: #f76414;}
-}
-.sun {
-  animation: 4s color-change infinite alternate linear;
-}
-@keyframes cloud-move {
-  from {transform: translate(0,50px);}
-  to {transform: translate(200px,50px);}
-}
-.cloud-front {
-  animation: 30s cloud-move infinite alternate linear;
-}
-
-@keyframes cloud-move-reverse {
-  from {transform: translate(446px,48px);}
-  to {transform: translate(100px, 48px);}
-}
-.cloud-back {
-  animation: 34s cloud-move-reverse infinite alternate linear;
 }
