--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,6 @@ Primary Color Writing (Plum): #654B54
 Secondary Color: #E8D5CC
 */
 
-/* -------------------------BASICS -------------------------- */
-/* -------------------------------------------------------------------------- */
 /*For box sizing*/
 * {
 	box-sizing: border-box;
@@ -16,6 +14,9 @@ html {
 	line-height: 1.15; /* 1 */
 	-webkit-text-size-adjust: 100%; /* 2 */
 }
+
+/* Sections
+   ========================================================================== */
 
 /*
  * Remove the margin in all browsers.
@@ -154,7 +155,7 @@ a:focus {
 	color: #ffffff;
 }
 
-/* -------------------------------------- NAVIGATION ------------------------------------- */
+/* -------------------------------------- navigation ------------------------------------- */
 header {
 	background-color: #e8ddd5;
 	padding: 10px;
@@ -220,6 +221,9 @@ nav > ul > li > a {
 }
 
 /* --------------------------------------- MEDIA QUIERIES ---------------------------------------- */
+/* =============
+Medium devices (640px and larger)
+================================================================================================== */
 
 [class*='col-'] {
 	float: left;
@@ -232,10 +236,6 @@ nav > ul > li > a {
 .col-sm-6 {
 	width: 50%;
 }
-
-/* =============
-Medium devices (640px and larger)
-================================================================================================== */
 
 @media only screen and (min-width: 640px) {
 	header {
@@ -267,17 +267,13 @@ Medium devices (640px and larger)
 		display: none;
 	}
 }
-
 /* ==============================
 Large devices (1024px or larger)
 ================================= */
-
 @media only screen and (min-width: 1024px) {
 }
-
 /* ==============================
 X-large devices (1440px or larger)
 ================================= */
-
 @media only screen and (min-width: 1440px) {
 }
