--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,7 @@ main {
   height: 50px;
   display: inline;
   padding: 10px 15px 18px 15px;
+  border-style: groove;
   border-width: 0px 2px;
 }
 
@@ -252,7 +253,7 @@ nav>ul>li>a {
 }
 
 .logo {
-  max-width: 200px;
+  max-width: 250px;
   padding-left: 16px;
 }
 
