--- a/css/style.css
+++ b/css/style.css
@@ -18,27 +18,15 @@ body {
 }
 
 /*For Images*/
+
+.logo {
+    max-width: 200px;
+    padding-top: 8px;
+  }
+
 img {
   width: 100%;
   }
-
-  /* Resize images */
-  .custom-sizea img {
-      width: 100%;
-      height: 100%;
-      padding-top: 70px;
-      padding-left: 15px;
-  }
-
-  .custom-sizeb img {
-    width: 90%;
-    height: 100%;
-    padding-top: 50px;
-    padding-left: 50px;
-  }
-
-
-
 
 .center {
   text-align: center;
@@ -72,8 +60,7 @@ main {
   height: 50px;
   display: inline;
   padding: 10px 15px 18px 15px;
-  border-style: groove;
-  border-width: 0px 2px;
+  border-style: none;
 }
 
 /* -------------------------------------- FONTS AND TEXT / H1-5 HEADERS ------------------------------------- */
@@ -214,9 +201,9 @@ footer {
   background-color: #D0C4BE;
   text-align: center;
   padding-top: 10px;
-  padding-right: 5px;
+  padding-right: 0px;
   padding-bottom: 15px;
-  padding-left: 5px;
+  padding-left: 0px;
   width: 100%
 }
 
@@ -252,16 +239,12 @@ nav>ul>li>a {
   padding: 0 15px;
 }
 
-.logo {
-  max-width: 250px;
-  padding-left: 16px;
-}
-
 /* --------------------------------------- HAMBURGER MENU ---------------------------------------- */
 .navtoggle li .icon {
   position: absolute;
-  right: 0;
-  top: 2px;
+  right: 0px;
+
+  top: 1px;
   font-size: 20px;
 }
 
@@ -278,8 +261,8 @@ nav>ul>li>a {
 }
 
 .navtoggle.responsive li {
-  display: block;
-  padding: 10px 0;
+  display: inline-block;
+  padding: 10px 0px;
   border-top: 1px solid rgba(101, 75, 84, 0.5);
   border-bottom: #654B54
 }
@@ -289,6 +272,12 @@ nav>ul>li>a {
 }
 
 /* --------------------------------------- MEDIA QUIERIES ---------------------------------------- */
+
+/* =============
+Small devices (480px and larger)
+================================================================================================== */
+@media only screen and (min-width: 480px) {
+
 /* =============
 Medium devices (640px and larger)
 ================================================================================================== */
@@ -307,10 +296,39 @@ Medium devices (640px and larger)
 }
 
 @media only screen and (min-width: 640px) {
+
+  .menu li {
+  height: 50px;
+  display:inline;
+  padding: 10px 15px 18px 10px;
+  border-style: groove;
+  border-width: 0px 2px;
+  }
+
   header {
     text-align: unset;
-    padding: 20px 0 13px;
+    padding: 20px 0 20px;
   }
+
+  .logo {
+      max-width: 150px;
+      padding-top: 8px;
+      padding-left: 8px;
+    }
+
+    .custom-sizea img {
+      width: 100%;
+      height: 100%;
+      padding-right: 15px;
+    }
+
+    .custom-sizeb img {
+      width: 100%;
+      height: 100%;
+      padding-top: 15px;
+      padding-left: 0px;
+      padding-right: 0px
+    }
 
   nav {
     width: auto;
@@ -343,7 +361,37 @@ Medium devices (640px and larger)
 /* ==============================
 Large devices (1024px or larger)
 ================================= */
-@media only screen and (min-width: 1024px) {}
+@media only screen and (min-width: 1024px) {
+
+  .logo {
+      max-width: 250px;
+      padding-top: 8px;
+      padding-left: 15px;
+    }
+
+    .menu li {
+  height: 50px;
+  display:inline;
+  padding: 30px 15px 18px 30px;
+  border-style: groove;
+  border-width: 0px 2px;
+}
+
+.custom-sizeb img {
+  width: 90%;
+  height: 100%;
+  padding-left: 50px;
+  padding-right: 15px;
+}
+
+.custom-sizea img {
+  width: 100%;
+  height: 100%;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+    }
 
 /* ==============================
 X-large devices (1440px or larger)
