--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,8 @@ Primary Color Brand (Sage Background): #B2A083
 Secondary Color Brand (Tan): #E8DDD5
 Primary Color Writing (Plum): #654B54
 Secondary Color: #E8D5CC
-*/ /*For box sizing*/
+*/
+/*For box sizing*/
 * {
   box-sizing: content-box;
 }
@@ -11,22 +12,23 @@ Secondary Color: #E8D5CC
 html {
   scroll-behavior: smooth;
 }
-/* Sections ========================================================================== *//*
+
+/* Sections ========================================================================== */
+/*
  * Remove the margin in all browsers. */
 body {
   margin: 0;
 }
 
 /*For Images*/
-
 .logo {
-    max-width: 200px;
-    padding-top: 8px;
-  }
+  max-width: 200px;
+  padding-top: 8px;
+}
 
 img {
   width: 100%;
-  }
+}
 
 .center {
   text-align: center;
@@ -39,9 +41,9 @@ img {
 .descWrappera {
   padding: 45px
 }
+
 /* -------------------------OVERALL LAYOUT STYLING -------------------------- */
 /* -------------------------------------------------------------------------- */
-
 #hero {
   background-color: #b2a083;
   padding: 20px 0;
@@ -64,10 +66,9 @@ main {
 }
 
 /* -------------------------------------- FONTS AND TEXT / H1-5 HEADERS ------------------------------------- */
-
 #hero h1 {
   margin: 0;
-  padding: 0.67em 0;
+  padding: 0.5em 0;
 }
 
 #hero span {
@@ -243,7 +244,6 @@ nav>ul>li>a {
 .navtoggle li .icon {
   position: absolute;
   right: 0px;
-
   top: 1px;
   font-size: 20px;
 }
@@ -272,45 +272,43 @@ nav>ul>li>a {
 }
 
 /* --------------------------------------- MEDIA QUIERIES ---------------------------------------- */
-
 /* =============
 Small devices (480px and larger)
 ================================================================================================== */
 @media only screen and (min-width: 480px) {
 
-/* =============
+  /* =============
 Medium devices (640px and larger)
 ================================================================================================== */
-[class*='col-'] {
-  float: left;
-}
-
-.row::after {
-  content: '';
-  clear: both;
-  display: table;
-}
-
-.col-sm-6 {
-  width: 50%;
-}
-
-@media only screen and (min-width: 640px) {
-
-  .menu li {
-  height: 50px;
-  display:inline;
-  padding: 10px 15px 18px 10px;
-  border-style: groove;
-  border-width: 0px 2px;
+  [class*='col-'] {
+    float: left;
   }
 
-  header {
-    text-align: unset;
-    padding: 20px 0 20px;
+  .row::after {
+    content: '';
+    clear: both;
+    display: table;
   }
 
-  .logo {
+  .col-sm-6 {
+    width: 50%;
+  }
+
+  @media only screen and (min-width: 640px) {
+    .menu li {
+      height: 50px;
+      display: inline;
+      padding: 10px 15px 18px 10px;
+      border-style: groove;
+      border-width: 0px 2px;
+    }
+
+    header {
+      text-align: unset;
+      padding: 20px 0 20px;
+    }
+
+    .logo {
       max-width: 150px;
       padding-top: 8px;
       padding-left: 8px;
@@ -319,7 +317,9 @@ Medium devices (640px and larger)
     .custom-sizea img {
       width: 100%;
       height: 100%;
-      padding-right: 15px;
+      padding-left: 15px;
+      padding-right: 0px;
+      padding-top: 70px;
     }
 
     .custom-sizeb img {
@@ -330,70 +330,68 @@ Medium devices (640px and larger)
       padding-right: 0px
     }
 
-  nav {
-    width: auto;
-    float: right;
-    margin-top: 4px;
+    nav {
+      width: auto;
+      float: right;
+      margin-top: 4px;
+    }
+
+    .col-md-6 {
+      width: 50%;
+    }
+
+    .col-md-4 {
+      width: calc(100% / 4);
+    }
+
+    nav>ul>li {
+      display: inline-block;
+      position: relative;
+    }
+
+    .navtoggle li:not(:last-child) {
+      display: inline-block;
+    }
+
+    .navtoggle li:last-child {
+      display: none;
+    }
   }
 
-  .col-md-6 {
-    width: 50%;
-  }
-
-  .col-md-4 {
-    width: calc(100% / 4);
-  }
-
-  nav>ul>li {
-    display: inline-block;
-    position: relative;
-  }
-
-  .navtoggle li:not(:last-child) {
-    display: inline-block;
-  }
-
-  .navtoggle li:last-child {
-    display: none;
-  }
-}
-
-/* ==============================
+  /* ==============================
 Large devices (1024px or larger)
 ================================= */
-@media only screen and (min-width: 1024px) {
-
-  .logo {
+  @media only screen and (min-width: 1024px) {
+    .logo {
       max-width: 250px;
       padding-top: 8px;
       padding-left: 15px;
     }
 
     .menu li {
-  height: 50px;
-  display:inline;
-  padding: 30px 15px 18px 30px;
-  border-style: groove;
-  border-width: 0px 2px;
-}
-
-.custom-sizeb img {
-  width: 90%;
-  height: 100%;
-  padding-left: 50px;
-  padding-right: 15px;
-}
-
-.custom-sizea img {
-  width: 100%;
-  height: 100%;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-
+      height: 50px;
+      display: inline;
+      padding: 30px 15px 18px 30px;
+      border-style: groove;
+      border-width: 0px 2px;
     }
 
-/* ==============================
-X-large devices (1440px or larger)
-================================= */
-@media only screen and (min-width: 1440px) {}
+    .custom-sizeb img {
+      width: 90%;
+      height: 100%;
+      padding-left: 50px;
+      padding-right: 15px;
+    }
+
+    .custom-sizea img {
+      width: 100%;
+      height: 100%;
+      padding-left: 15px;
+      padding-right: 15px;
+      padding-top: 50px;
+    }
+
+    body {
+      padding-bottom: 50px;
+    }
+  }
