--- a/css/style.css
+++ b/css/style.css
@@ -362,6 +362,11 @@ Medium devices (640px and larger)
 Large devices (1024px or larger)
 ================================= */
   @media only screen and (min-width: 1024px) {
+
+    .col-lg-6 {
+      width: 50%
+    }
+
     .logo {
       max-width: 250px;
       padding-top: 8px;
