--- a/css/style.css
+++ b/css/style.css
@@ -393,6 +393,7 @@ Large devices (1024px or larger)
       height: 100%;
       padding-left: 50px;
       padding-right: 50px;
+      margin-top: 20px;
     }
 
     body {
