--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@ img {
 
 .descWrappera {
   padding: 25px
+  padding-left: 15px;
 }
 
 /* -------------------------OVERALL LAYOUT STYLING -------------------------- */
