--- a/css/style.css
+++ b/css/style.css
@@ -39,8 +39,7 @@ img {
 }
 
 .descWrappera {
-  padding: 25px
-  padding-left: 15px;
+  padding-left: 25px
 }
 
 /* -------------------------OVERALL LAYOUT STYLING -------------------------- */
