--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ img {
 }
 
 .descWrappera {
-  padding-left: 25px
+  padding-right: 25px;
 }
 
 /* -------------------------OVERALL LAYOUT STYLING -------------------------- */
