--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@ img {
 
 .descWrappera {
   padding-right: 25px;
+  padding-left: 25px;
 }
 
 /* -------------------------OVERALL LAYOUT STYLING -------------------------- */
