Revert "Update style.css"
This reverts commit fa9f80b5d639e4f70e0cc1aa7f0f5e21641e0e5d.

--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ img {
 /* -------------------------OVERALL LAYOUT STYLING -------------------------- */
 /* -------------------------------------------------------------------------- */
 #hero {
-  background-color: #e8ddd6;
+  background-color: #b2a083;
   padding: 0px 0;
   background-color: #e8ddd6;
   display: block;
