--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ img {
 /* -------------------------OVERALL LAYOUT STYLING -------------------------- */
 /* -------------------------------------------------------------------------- */
 #hero {
-  background-color: #b2a083;
+  background-color: ##FFFFFF;
   padding: 20px 0;
   background-color: #e8ddd6;
   display: block;
