--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ main {
 /*For Text*/
 body {
   font-family: 'Playfair Display', sans-serif;
-  background-color: #b2a083;
+  background-color: #FFFFFF;
   font-size: 16px;
   /* Sets the font size to 16px */
   font-weight: 400;
